Implemented partials for header and footer sections

--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,12 +1,12 @@
 <html>
-    <title>
-        <%= title %>
-    </title>
+    <head>
+        <title><%= title %></title>
+    </head>
 
     <body>
         <%- include('_header'); -%>
 
-        <h1> Welcome to Codeial <%= title %> </h1>
+        Users profile page
 
         <%- include('_footer'); -%>
     </body>
