--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,1 @@
-<html>
-    <title>
-        <%= title %>
-    </title>
-
-    <body>
-        <%- include('_header'); -%>
-
-        <h1> Welcome to Codeial <%= title %> </h1>
-
-        <%- include('_footer'); -%>
-    </body>
-</html>
+<h1> Welcome to Codeial Home Page </h1>
