--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,13 +1,1 @@
-<html>
-    <head>
-        <title><%= title %></title>
-    </head>
-
-    <body>
-        <%- include('_header'); -%>
-
-        Users profile page
-
-        <%- include('_footer'); -%>
-    </body>
-</html>
+<h1> Users Profile Page</h1>
