--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title><%= title %></title>
+
+        <link rel="stylesheet" href="/css/layout.css">
+        <%- style %>
     </head>
 
     <body>
@@ -9,5 +12,7 @@
         <%- body %>
 
         <%- include('_footer'); -%>
+
+        <%- script %>
     </body>
 </html>
