--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,13 @@
 <header>
     Page header
+
+    <ul>
+        <% if(locals.user){ %>
+            <a href="/users/profile"><li> <%= user.name %></li></a>
+            <li><a href="/users/sign-out"> Sign Out</a></li>
+        <% }else{ %>
+            <li><a href="/users/sign-in"> Sign In </a></li>
+            <li><a href="/users/sign-up"> Sign Up</a></li>
+        <% } %>
+    </ul>
 </header>
