--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,11 @@
 <footer>
-    Page footer
+    <div id="rights">
+        <p> @RajeshRoul. All Rights Reserved</p>
+    </div>
+    <div id="navigation-items">
+        <ul>
+            <li><a href="/"> Home </a></li>
+            <li><a href="/users/profile"> Profile </a></li>
+        </ul>
+    </div>
 </footer>
