--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,13 +1,19 @@
 <header>
-    Page header
 
-    <ul>
-        <% if(locals.user){ %>
-            <a href="/users/profile"><li> <%= user.name %></li></a>
-            <li><a href="/users/sign-out"> Sign Out</a></li>
-        <% }else{ %>
-            <li><a href="/users/sign-in"> Sign In </a></li>
-            <li><a href="/users/sign-up"> Sign Up</a></li>
-        <% } %>
-    </ul>
+    <div id="logo">
+        <p><a href="/">Codeial</a> </p>
+    </div>
+
+    <div id="header-navigation-items">
+        <ul>
+            <% if(locals.user){ %>
+                <li><a href="/users/profile"> <%= user.name %> </a></li>
+                <li><a href="/users/sign-out"> Sign Out</a></li>
+            <% }else{ %>
+                <li><a href="/users/sign-in"> Sign In </a></li>
+                <li><a href="/users/sign-up"> Sign Up</a></li>
+            <% } %>
+        </ul>
+    </div>
+    
 </header>
