--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,13 +3,17 @@
         <title><%= title %></title>
 
         <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
         <%- style %>
     </head>
 
     <body>
         <%- include('_header'); -%>
 
-        <%- body %>
+        <main id="main-section">
+            <%- body %>
+        </main>
 
         <%- include('_footer'); -%>
 
