--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,14 @@
 
 
 <section id="feed-posts">
-    <h4>Posts</h4>
-    <form action="/posts/create" id="new-post-form" method="POST">
-        <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
-        <input type="submit" value="Post">
-    </form>
+    <% if(locals.user){%>
+        <h4>Posts</h4>
+        <form action="/posts/create" id="new-post-form" method="POST">
+            <textarea name="content" cols="30" rows="3" placeholder="Type Here..."></textarea>
+            <input type="submit" value="Post">
+        </form>
+    <%}%>
+    
 </section>
 
 <div id="posts-list-container">
