--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,2 +1,10 @@
-body {
-  background-color: cyan; }
+#home-container {
+  display: flex;
+  height: 100%; }
+  #home-container #feed-posts {
+    width: 70%;
+    padding: 10px; }
+  #home-container #user-friends {
+    width: 30%;
+    padding: 10px;
+    border-left: 2px solid grey; }
