--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,16 @@
-body{
-    background-color: cyan;
+#home-container{
+    display: flex;
+    height: 100%;
+
+    #feed-posts{
+        width: 70%;
+        padding: 10px;
+    }
+
+    #user-friends{
+        width: 30%;
+        padding: 10px;
+        border-left: 2px solid grey;
+        
+    }
 }
