--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,34 +1,38 @@
 <link rel="stylesheet" href="/css/home.css">
 
-<h1> Welcome to Codeial Home Page </h1>
 
 
-<section id="feed-posts">
-    <% if(locals.user){%>
-        <h4>Posts</h4>
-        <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
-            <input type="submit" value="Post">
-        </form>
-    <%}%>
-    
-</section>
+<div id="home-container">
 
-<div id="posts-list-container">
-    <ul>
-        <% for(post of posts){%> 
-            
-            <%- include('_post') -%>
-
+    <section id="feed-posts">
+        <h1> Welcome to Codeial Home Page </h1>
+        <% if(locals.user){%>
+            <h4>Posts</h4>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
+                <input type="submit" value="Post">
+            </form>
         <%}%>
-    </ul>
-</div>
 
-<section id="user-friends">
-    <h4>Friends</h4>
-    <% for(u of all_users){%>
-        <p>
-            <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
-        </p>
-    <%}%>
-</section>
+        <div id="posts-list-container">
+        <ul>
+            <% for(post of posts){%> 
+                
+                <%- include('_post') -%>
+
+            <%}%>
+        </ul>
+    </div>
+
+    </section>
+
+    
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users){%>
+            <p>
+                <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+            </p>
+        <%}%>
+    </section>
+</div>
