--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,6 @@
 #home-container {
   display: flex;
-  height: 100%; }
+  min-height: 100%; }
   #home-container #feed-posts {
     width: 70%;
     padding: 10px; }
