--- a/views/mailers/comments/new_comment.ejs
+++ b/views/mailers/comments/new_comment.ejs
@@ -1,5 +1,5 @@
 <div>
-    <p>Hi <%= comment.user.name %>!</p>
+    <p>Hi! <%= comment.user.name %>,</p>
     <br>
     <br>
     <p>Your comment <strong><%=comment.content%></strong> just got published on codeial</p>
