--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -16,4 +16,7 @@
     <!-- else show only the profile info -->
     <p><%= profile_user.name %></p>
     <p><%= profile_user.email %></p>
+    <br>
+    <br>
+    <a href="/users/addfriend/<%=profile_user.id %>"> <span> <%=friend%> </span> </a>
 <% } %>
