--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 <h1> Codeial | Users Profile Page</h1>
 
 <img src="<%= user.avatar %>" alt="<%= user.name %>" width="300">
@@ -18,5 +20,7 @@
     <p><%= profile_user.email %></p>
     <br>
     <br>
-    <a href="/users/addfriend/<%=profile_user.id %>"> <span> <%=friend%> </span> </a>
+    <a id="follow" href="/users/addfriend/<%=profile_user._id %>"> <%=friend%> </a>
 <% } %>
+
+<script src="/js/toggle_follow.js"></script>
