Created chatbox UI

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
+        <link rel="stylesheet" href="/css/chatbox.css">
         <%- style %>
     </head>
 
@@ -19,6 +20,8 @@
         <main id="main-section">
             <%- body %>
         </main>
+
+        <%- include('_chatbox'); -%>
 
         <%- include('_footer'); -%>
 
