--- a/assets/css/chatbox.css
+++ b/assets/css/chatbox.css
@@ -9,10 +9,13 @@
   #chatbox #chats {
     width: 250px;
     height: 300px;
-    overflow-y: scroll; }
-  #chatbox form {
+    overflow-y: scroll;
+    list-style: none;
+    margin: 0px;
+    padding-inline-start: 0; }
+  #chatbox #form {
     text-align: center; }
-    #chatbox form button {
+    #chatbox #form button {
       color: white;
       background-color: green; }
 
@@ -31,4 +34,5 @@
   background-color: #d16464;
   padding: 8px 3px;
   font-size: 1.2rem;
-  margin: 3px 5px; }
+  margin: 3px 5px;
+  float: left; }
