--- a/assets/scss/chatbox.scss
+++ b/assets/scss/chatbox.scss
@@ -10,8 +10,11 @@
         width: 250px;
         height: 300px;
         overflow-y: scroll;
+        list-style: none;
+        margin: 0px;
+        padding-inline-start: 0;
     }
-    form{
+    #form{
         text-align: center;
         button{
             color: white;
@@ -37,4 +40,5 @@
     padding: 8px 3px;
     font-size: 1.2rem;
     margin: 3px 5px;
+    float: left;
 }
