--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -18,7 +18,7 @@
     </small>
     <div class="post-comments">
         <% if(locals.user){%> 
-            <form action="/comments/create" id="new-comment-form" method="POST">
+            <form action="/comments/create" class="new-comment-form" method="POST">
                 <input type="text" name="content" placeholder="Type here to add comment..." required>
                 <input type="hidden" name="post" value="<%= post._id %>">
                 <input type="submit" value="Add Comment">
