--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,3 +50,11 @@
         let toggleLike = new ToggleLike(self);
     });
 </script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
+<% if(locals.user){%>
+    <script>
+        new ChatEngine('chatbox', '<%= locals.user.email %>');
+    </script>
+<%}%>
