--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="css/home.css">
 
 
 
@@ -38,9 +38,9 @@
 </div>
 
 <!-- importing script for creating posts -->
-<script src="/js/home_posts.js"></script>
+<script src="js/home_posts.js"></script>
 <!-- importing script for creating comments -->
-<script src="/js/home_comments.js"></script>
+<script src="js/home_comments.js"></script>
 
 <!-- import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
 <script src="js/toggle_likes.js"></script>
@@ -52,7 +52,7 @@
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-<script src="/js/chat_engine.js"></script>
+<script src="js/chat_engine.js"></script>
 <% if(locals.user){%>
     <script>
         new ChatEngine('chatbox', '<%= locals.user.email %>');
