--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -23,4 +23,4 @@
     <a id="follow" href="/users/addfriend/<%=profile_user._id %>"> <%=friend%> </a>
 <% } %>
 
-<script src="/js/toggle_follow.js"></script>
+<script src="js/toggle_follow.js"></script>
