--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,7 +1,7 @@
 <header>
 
     <div id="logo">
-        <p><a href="/">Codeial</a> </p>
+        <p><a href="/">PingMe</a> </p>
     </div>
 
     <div id="header-navigation-items">
