--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,3 +2,8 @@ body {
   margin: 0; }
   body #main-section {
     min-height: 100%; }
+  body .horizontal-row {
+    width: 100%;
+    height: 2px;
+    margin: 5px 0px;
+    background-color: lightgrey; }
