--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -4,4 +4,10 @@ body{
     #main-section{
         min-height: 100%;
     }
+    .horizontal-row{
+        width: 100%;
+        height: 2px;
+        margin: 5px 0px;
+        background-color: lightgrey;
+    }
 }
