--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,16 +1,17 @@
 <html>
     <head>
         <title><%= title %></title>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         
-        <link rel="stylesheet" href="<%= assetPath('css/layout.css') %>">
-        <link rel="stylesheet" href="<%= assetPath('css/header.css') %>">
-        <link rel="stylesheet" href="<%= assetPath('css/footer.css') %>">
-        <link rel="stylesheet" href="<%= assetPath('css/chatbox.css') %>">
+        <link rel="stylesheet" href="<%= assetPath('/css/layout.css') %>">
+        <link rel="stylesheet" href="<%= assetPath('/css/header.css') %>">
+        <link rel="stylesheet" href="<%= assetPath('/css/footer.css') %>">
+        <link rel="stylesheet" href="<%= assetPath('/css/chatbox.css') %>">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <%- style %>
     </head>
 
