--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,11 +1,28 @@
-<h1> User Sign Up </h1>
+<link rel="stylesheet" href="<%= assetPath('/css/sign-in-up.css') %>">
 
-<form action="/users/create" method="POST">
-    <input type="text" name="name" placeholder="Your Name" required>
-    <input type="email" name="email" placeholder="Your Email" required>
-    <input type="password" name="password" placeholder="Your password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm Password" required>
-    <input type="submit" value="Sign Up">
-</form>
+<div id="outer-sign-in-up">
+    <div id = "user-sign-in">
+        <h1> User Sign Up </h1>
 
-<p><a href="/users/auth/google"> Google SignIn / SignUp</a></p>
+        <form action="/users/create" method="POST">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <div id="otp">
+                <input type="number" name="otp" placeholder="Enter OTP" required>
+                <a href="">Send OTP</a>
+            </div>
+            <input type="password" name="password" placeholder="Your password" required>
+            <input type="password" name="confirm_password" placeholder="Confirm Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        <a href="/users/sign-in">Existing User? Sign in</a>
+        <div class="horizontal-row"></div>
+        <p>Other ways to Sign Up</p>
+        <div id="other-methods">
+            <a href="/users/auth/google">
+                <img src="https://hrcdn.net/community-frontend/assets/google-colored-20b8216731.svg" alt="Google Sign In">
+            </a>
+        </div>
+    </div>
+</div>
+
